--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,9 +54,21 @@ jobs:
         echo "step level 3: ${{ env.STEP_LEVEL_3 }}"
     
     - name: Set environment variable 1
-        shell: bash
-        run: echo "STEPSET_VALUE_1='This is the value 1 set in the step'" >> $GITHUB_ENV
+      shell: bash
+      run: echo "STEPSET_VALUE_1='This is the value 1 set in the step'" >> $GITHUB_ENV
     
     - name: Set environment variable 2
-        shell: pwsh
-        run: echo "STEPSET_VALUE_1='This is the value 1 set in the step'" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+      shell: pwsh
+      run: echo "STEPSET_VALUE_1='This is the value 1 set in the step'" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf-8 -Append
+    
+    - name: Get environment variables in PowerShell
+      shell: pwsh
+      run: |
+        echo "Value 1: $env:STEPSET_VALUE_1"
+        echo "Value 2: $env:STEPSET_VALUE_2"
+    
+    - name: Get environment variables in bash
+      shell: bash
+      run: |
+        echo "Value 1: $STEPSET_VALUE_1"
+        echo "Value 2: $STEPSET_VALUE_2"
