--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -78,7 +78,7 @@ jobs:
       shell: bash
       run: |
         first_value="This is the value for the first output"
-        echo "::set-output name=Apr5::$first_value"
+        echo "::set-output name=Apr5::$first_value" # deprecated. Use the method below...
         echo "april06=$first_value" >> $GITHUB_OUTPUT
     
     - name: Get output value
@@ -86,3 +86,4 @@ jobs:
       run: |
         echo "The value of the first output is: ${{ steps.swm.outputs.Apr5}}"
         echo "The value of the first output is: ${{ steps.swm.outputs.april06}}"
+        echo "$GITHUB_ENV"
