--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,4 +17,12 @@ jobs:
     - name: Say Hello World on ${{ matrix.os }}
       shell: bash
       run: |
+        # echo "Hello World on ${{ matrix.os }} with ${{ matrix.nodejs }}"
         echo "Hello World on ${{ matrix.os }} with ${{ matrix.nodejs }}"
+    
+    - name: Say Hello World on ${{ matrix.os }}
+      if: matrix.os == 'ubuntu-latest'
+      shell: bash
+      run: |
+        echo "Hello Ubuntu on ${{ matrix.os }} with ${{ matrix.nodejs }}"
+        echo "Hello Ubuntu on ${{ matrix.os }} with ${{ matrix.nodejs }}"
