--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,6 @@ jobs:
         --header 'Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
         --header 'Content-Type: application/json' \
         --data-raw '{
-          "roomId": "${{ secrets.ROOM_ID }}",
+          "teamId": "${{ secrets.ROOM_ID }}",
           "text": "깃헙 액션 101 워크샵에서 보내는 메시지 입니다. from: ${{ github.repository }}"
         }'
