--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,8 +14,8 @@ jobs:
       run: |
         curl --location --request POST 'https://webexapis.com/v1/messages' \
         --header 'Authorization: Bearer ${{ secrets.ACCESS_TOKEN }}' \
-        --header 'Content-Type: application/json' \
+        --header 'Content-Type: application/vnd.microsoft.card.adaptive' \
         --data-raw '{
-          "teamId": "${{ secrets.ROOM_ID }}",
+          "roomId": "${{ secrets.ROOM_ID }}",
           "text": "깃헙 액션 101 워크샵에서 보내는 메시지 입니다. from: ${{ github.repository }}"
         }'
